(bugfix) Correct alignment
Applies Pull Requests #8
   - Recreated effort to correct missing branch reference and code conflicts.

--- a/style.css
+++ b/style.css
@@ -86,6 +86,8 @@ body {
     list-style: none;
     font-size: 24px;
     line-height: 40px;
+    text-align:left;
+    display:inline-block;
 }
 
 
